# kafka-clickhouse-docker

./: push.py  pyproject.toml
